fixing the weird height/width issues on mobile

--- a/src/app/components/side_menu/side_menu.less
+++ b/src/app/components/side_menu/side_menu.less
@@ -33,8 +33,8 @@
   }
 
   @media @smallerScreen {
-    width: 100vw;
-    transform: translate3d(-102vw, 0, 0);
+    width: 100%;
+    transform: translate3d(-102%, 0, 0);
 
     &.open {
       transform: translate3d(0, 0, 0);
